# dreamy-buffers

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh  compile_flatbuffers.sh  generate_single_header.py
compiled/cpp/: AudioAttributes_generated.h  AudioPacket_generated.h  Axiomology_generated.h  Color_generated.h  DisplaySignal_generated.h  Essentia_generated.h  FloatArrayMorsel_generated.h  FloatMorsel_generated.h  FrequencyBand_generated.h  IdentifierWrapper_generated.h  LedPacket_generated.h  LedPayload_generated.h  Luminary_generated.h  OnsetMethod_generated.h  OnsetProcessorParameters_generated.h  Onset_generated.h  Parameter_generated.h  Peaks_generated.h  Phenomenon_generated.h  PitchMethod_generated.h  PitchProcessorParameters_generated.h  Pitch_generated.h  RGBColor_generated.h  STFT_generated.h  Signalarium_generated.h  SpectralFlux_generated.h  Spectrogram_generated.h
compiled/python/ImpresarioSerialization/: AudioAttributes.py  AudioPacket.py  Axiomology.py  Color.py  DisplaySignal.py  Essentia.py  FloatArrayMorsel.py  FloatMorsel.py  Identifier.py  IdentifierWrapper.py  LedPacket.py  LedPayload.py  Luminary.py  Morsel.py  Onset.py  OnsetProcessorParameters.py  Parameter.py  STFT.py  (+8 more)
include/: ImpresarioSerialization.h
src/: IdentifierWrapper.fbs  Parameter.fbs
src/audioProcessing/: AudioAttributes.fbs  AudioPacket.fbs
src/cosmographer/: Luminary.fbs
src/cosmology/: Axiomology.fbs  Essentia.fbs  Luminary.fbs  Phenomenon.fbs  Signalarium.fbs
src/morsel/: FloatMorsel.fbs
src/performance/: LedPacket.fbs  LedPayload.fbs  RGBColor.fbs
(+11 files in other folders)
